Implement shipment tracking platform backend (#1)
* Implement shipment tracking platform backend

Co-authored-by: souritra-bounteous <souritra-bounteous@users.noreply.github.com>

* Add test dependencies to backend services

Co-authored-by: souritra-bounteous <souritra-bounteous@users.noreply.github.com>

---------

Co-authored-by: Cursor Agent <cursoragent@cursor.com>
Co-authored-by: souritra-bounteous <souritra-bounteous@users.noreply.github.com>